Remove calls to ColorSpace::GetICCProfile

Replace with ICCProfile::FromColorSpace.

Do not populate ScreenInfo::icc_profile on non-Mac platforms.

Bug: 787418, 766736
Change-Id: I6794284fd3ca44d1a4667a8ce0f104948bdd596a