ui/gfx/color_space.cc
@@ -418,8 +418,8 @@ sk_sp<SkColorSpace> ColorSpace::ToSkColorSpace() const {
   // If we got a specific SkColorSpace from the ICCProfile that this color space
   // was created from, use that.
   if (icc_profile_id_) {
-    ICCProfile icc_profile;
-    if (GetICCProfile(&icc_profile)) {
+    ICCProfile icc_profile = ICCProfile::FromColorSpace(*this);
+    if (icc_profile.IsValid()) {
       return icc_profile.internals_->sk_color_space_;
     } else {
       // This will fall through to creating a parametric approximation. The
@@ -488,14 +488,6 @@ sk_sp<SkColorSpace> ColorSpace::ToSkColorSpace() const {
   if (has_named_gamut)
     return SkColorSpace::MakeRGB(fn, named_gamut);
   return SkColorSpace::MakeRGB(fn, to_xyz_d50);
-}
-
-bool ColorSpace::GetICCProfileData(std::vector<char>* output_data) const {
-  ICCProfile icc_profile;
-  if (!GetICCProfile(&icc_profile))
-    return false;
-  *output_data = icc_profile.internals_->data_;
-  return true;
 }
 
 void ColorSpace::GetPrimaryMatrix(SkMatrix44* to_XYZD50) const {
